--- a/frontend/src/styles/react-quill.style.css
+++ b/frontend/src/styles/react-quill.style.css
@@ -4,13 +4,13 @@
 
 .diary_header_container {
     background-color: white;
+    height: 3rem;
 }
 
 .diary_header {
     width: 8.5in;
     display: flex;
     justify-content: space-between;
-    align-items: baseline;
     background-color: white;
 }
 
@@ -34,7 +34,7 @@
     display: flex;
     justify-content: center;
     position: sticky;
-    top: 2.25rem;
+    top: 3rem;
     z-index: 1;
     background-color: white;
     border: none;
